--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "material-ui": "^0.20.2",
+    "particle-bg": "^0.3.2",
+    "particles-bg": "^2.5.0",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.1.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-typing-effect": "^2.0.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
@@ -26,7 +32,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
