--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "material-ui": "^0.20.2",
     "particle-bg": "^0.3.2",
     "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
     "react-reveal": "^1.2.2",
