--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.3.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
+    "react-geocode": "^0.2.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
