--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^3.4.1",
+    "deck.gl": "^8.2.8",
+    "highcharts": "^8.2.0",
+    "highcharts-react-official": "^3.0.0",
     "material-ui": "^0.20.2",
     "particle-bg": "^0.3.2",
     "particles-bg": "^2.5.0",
@@ -19,6 +22,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
+    "react-map-gl": "^5.2.8",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
