--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "particle-bg": "^0.3.2",
     "particles-bg": "^2.5.0",
@@ -27,6 +28,7 @@
     "react-scripts": "3.4.3",
     "react-typing-effect": "^2.0.3",
     "styled-components": "^5.1.1",
+    "typescript": "^4.0.2",
     "yarn": "^1.22.5"
   },
   "scripts": {
