--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "deck.gl": "^8.2.8",
+    "highcharts": "^8.2.0",
+    "highcharts-react-official": "^3.0.0",
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "particle-bg": "^0.3.2",
@@ -22,6 +25,7 @@
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
     "react-geocode": "^0.2.1",
+    "react-map-gl": "^5.2.8",
     "react-places-autocomplete": "^7.3.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
