--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "deck.gl": "^8.2.8",
+    "form-serialize": "^0.7.2",
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
     "jquery": "^3.5.1",
