--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-swipeable-views": "^0.13.9",
     "react-typing-effect": "^2.0.3",
     "styled-components": "^5.1.1",
     "typescript": "^4.0.2",
