--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-serialize": "^0.7.2",
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "particle-bg": "^0.3.2",
